# point-cloud-project

./: .gitignore  README.md
Homework I/lesson one/: pca_normal.py  visualize.py  voxel_filter.py
clustering/: GMM.py  KMeans.py  dbscan.py  dbscan_v1.py  mean_shift.py
descriptor/: CMakeLists.txt
feature_detection/: iss.py  iss_v2.py  iss_v3.py  iss_v4.py  pca_normal.py  run.sh  tags  test_frnn.py  visualize.py
feature_detection/frnn/: frnn_kernel.cu  gpu_frnn.cpp  gpu_frnn.hpp  gpu_frnn.pyx  setup3.py
feature_detection/nms/: gpu_nms.cpp  gpu_nms.hpp  gpu_nms.pyx  nms_kernel.cu
feature_detection/nms_2d/: setup3.py
feature_detection/nms_test/: test_num_v1.py
general_algorithm/: pca_normal.py  voxel_filter.py
hardware/turtlebot3/: realsense.py
intro_basic_algorithms/lesson_one/: visualize.py  voxel_filter.py
manifold_learning/: manifold_learning.ipynb
map/: out_1152_2021-12-04-11-53-08.bag
map/icp/: CMakeCache.txt  Makefile  cmake_install.cmake  pcl_icp  pcl_icp.cpp
map/pcd/: 1638590038.729460955.pcd  1638590068.684730530.pcd  1638590083.712911367.pcd  1638590098.740984201.pcd  1638590103.683041573.pcd  1638590113.769054413.pcd  1638590118.711217403.pcd  1638590123.754246712.pcd  1638590128.696266413.pcd  1638590133.739329338.pcd  1638590138.681448698.pcd  1638590143.724325657.pcd  1638590148.666465282.pcd
model_fitting/ransac_line/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ransac_line  ransac_line.cpp
model_fitting/ransac_plane/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ransac_plane  ransac_plane.cpp
model_fitting/test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test
nearest_neighbor_problem/: bstree.py  kdtree.py  octree.py
object_detection/voxelnet/: config.py
object_detection/voxelnet_v2/: box_overlaps.c  config.py  train.py  utils.py  voxelnet.py
object_detection/voxelnet_v5/: train.py
pcl/: CMakeLists.txt  pcl_pfh.cpp
pointNet/framework/: dataset.py  dataset_v1.py  model.py  test.py  (+1 more)
registration/ndt/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  normal_distribution_transform  normal_distribution_transform_v1.cpp  normal_distribution_transform_v2.cpp  room_scan2_transformed.pcd
registration/ndt_omp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  normal_distribution_transform.cpp  normal_distribution_transform_v1.cpp  normal_distribution_transform_v2.cpp  room_scan2_transformed.pcd
registration/ndt_omp/test/: normal_distribution_transform.cpp
(+46 files in other folders)
